<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/nav_create_group"
            android:icon="@drawable/baseline_group_add_24"
            android:checked="false"
            android:title="@string/menu_create_group" />
    </group>

    <group android:id="@+id/divider">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_box_24"
            android:checked="false"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_notifications"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/baseline_notifications_none_24"
            android:title="@string/menu_notifications"/>
    </group>

    <group android:id="@+id/divider2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_applications_24"
            android:checked="false"
            android:title="@string/menu_settings" />


        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:checked="false"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:checked="false"
            android:title="@string/menu_logout" />

    </group>


</menu>
