<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view"
        android:layout_gravity="top"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_notification_nick"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:text="ideath"/>

        <TextView
            android:id="@+id/tv_notification_message"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/notification_users"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/btn_notification_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_notification_spam"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_add"/>

            <Button
                android:id="@+id/btn_notification_spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_notification_cancel"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_spam"/>

            <Button
                android:id="@+id/btn_notification_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"/>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>