<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fl_loginAndRegistry"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValidCode.Activity.LoginAndRegistryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_loginAndRegistry"
        style="@style/Toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_titleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:textSize="18dp"
                android:gravity="center" />

            <ProgressBar
                android:id="@+id/progress_response"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:indeterminateDrawable="@drawable/white_progress"
                android:visibility="gone"/>

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_loginAndRegistry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/registration" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/et_nickname_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/nickname"
            />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="40dp"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/et_nickname_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:hint="@string/nickname"
            />

        <EditText
            android:id="@+id/et_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </LinearLayout>

</FrameLayout>